### manufakturConfig

2012 phpManufaktur by Ralf Hertsch  
MIT License (MIT) <http://www.opensource.org/licenses/MIT>  
<https://addons.phpmanufaktur.de/kitCronjob>


Release 0.16

* improved error handling while parsing XML files
* added XML attribute ´set_order` in tag `dialog` enables the manual order of fieldsets

Release 0.15 - 2012-07-03

* added function deleteSettingsForModule() to class manufakturConfig

Release 0.14 - 2012-07-02

* added function generatePassword() to class manufakturConfig

Release 0.13 - 2012-06-30

* completed README.md

Release 0.12 - 2012-06-29

* changed call of the Dwoo template engine
* added language depending configuration

Release 0.11 - 2012-06-26

* added LEPTON framework for I18n support
* changed backend.css
* added CHANGELOG, LICENSE and README.md
* added DE.cfg.php and EN.cfg.php
* added DE.php

Release 0.10 - 2012-04-08

* initial release